objects/blng__RevenueTransaction__c.object
<CustomObject>
    <customHelpPage>blng__revenueTransactionHelp</customHelpPage>
    <fields>
        <fullName>Days_Since_Start__c</fullName>
        <formula>if((today() - blng__RevenueFinancePeriod__r.blng__PeriodStartDate__c) &lt; 0, 0, today() - blng__RevenueFinancePeriod__r.blng__PeriodStartDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GL_Debit_Account_Name_Deferred__c</fullName>
        <formula>blng__RevenueRecognitionGLTreatment__r.blng__DebitGLAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Debit Account Name (Deferred)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_End__c</fullName>
        <formula>blng__RevenueFinancePeriod__r.blng__PeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_End_Date__c</fullName>
        <formula>blng__RevenueSchedule__r.blng__RevenueEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Start_Date__c</fullName>
        <formula>blng__RevenueSchedule__r.blng__RevenueStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Days__c</fullName>
        <formula>Revenue_End_Date__c -  Revenue_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>AccountRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>ContractRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>CreditNoteLineRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Note Line</label>
        <referenceTo>blng__DebitNoteLine__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>DebitNoteLineRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DeferredBalance__c</fullName>
        <inlineHelpText>The Deferred Revenue balance after recognizing revenue for this period.</inlineHelpText>
        <label>Deferred Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>InvoiceLineRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>LegalEntityRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>OrderProductRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OriginalFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>RevenueTransactions (Original Finance Period)</relationshipLabel>
        <relationshipName>RevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PreviouslyRecognizedRevenue__c</fullName>
        <inlineHelpText>Sum of all prior revenue transactions in the same Revenue Schedule</inlineHelpText>
        <label>Previously Recognized Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAmount__c</fullName>
        <inlineHelpText>The amount of revenue that will be recognized in this period</inlineHelpText>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueDistributionMethod__c</fullName>
        <label>Revenue Distribution Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinanceBook__c</fullName>
        <inlineHelpText>Inherited from the Revenue Schedule. The Finance Book where this revenue will be recorded.</inlineHelpText>
        <label>Revenue Finance Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinancePeriodUniqueId__c</fullName>
        <label>RevenueFinancePeriodUniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinancePeriod__c</fullName>
        <inlineHelpText>Inherited from the Revenue Schedule. The Finance Period where this revenue will be recorded.</inlineHelpText>
        <label>Revenue Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>FinancePeriodRevenueTransactions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inherited from the Revenue Schedule. The Revenue Rule that is used to calculate this transaction</inlineHelpText>
        <label>Revenue Recognition GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>GLRuleRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>GLTreatmentRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inherited from the Revenue Schedule. The Revenue Recognition Policy that is used to calculate this transaction</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>RevenueTransactions</relationshipLabel>
        <relationshipName>RevRecRuleRevenueTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionTreatment__c</fullName>
        <inlineHelpText>Inherited from the Revenue Schedule. The Revenue Treatment that is used to calculate this transaction</inlineHelpText>
        <label>Revenue Recognition Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueSchedule__c</fullName>
        <inlineHelpText>The parent schedule for this Revenue Transaction</inlineHelpText>
        <label>Revenue Schedule</label>
        <referenceTo>blng__RevenueSchedule__c</referenceTo>
        <relationshipLabel>Revenue Transactions</relationshipLabel>
        <relationshipName>RevenueScheduleRevenueTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <inlineHelpText>&quot;The current recognition status of this transaction. Can be:
Deferred
Recognized&quot;</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueTransactionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__SystemPeriodStartDate__c</fullName>
        <label>System Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>Revenue Transaction</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>